[gd_scene load_steps=5 format=3 uid="uid://0u12ygea35q"]

[ext_resource type="Script" uid="uid://5dipfswld5ci" path="res://PrivateDevRoom/Scripts/in_game_ui.gd" id="1_d072m"]
[ext_resource type="PackedScene" uid="uid://pxstp0eubbcl" path="res://PrivateDevRoom/Scenes/SubScenes/timer_panel.tscn" id="2_6vmd0"]
[ext_resource type="PackedScene" uid="uid://b7sg7iky655mc" path="res://PrivateDevRoom/Scenes/SubScenes/task_bar.tscn" id="2_jj7yp"]
[ext_resource type="PackedScene" uid="uid://b5sqb848jv55a" path="res://PrivateDevRoom/Scenes/SubScenes/pocket_inventory.tscn" id="3_rrm0x"]

[node name="InGameUI" type="CanvasLayer" node_paths=PackedStringArray("timer_panel", "task_bar", "pocket_inventory")]
script = ExtResource("1_d072m")
timer_panel = NodePath("MarginContainer/TimerPanel")
task_bar = NodePath("MarginContainer/TaskBar")
pocket_inventory = NodePath("MarginContainer/PocketInventory")
metadata/_custom_type_script = "uid://5dipfswld5ci"

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="TimerPanel" parent="MarginContainer" instance=ExtResource("2_6vmd0")]
layout_mode = 2

[node name="TaskBar" parent="MarginContainer" instance=ExtResource("2_jj7yp")]
layout_mode = 2
size_flags_horizontal = 8

[node name="TaskbarReferenceRect" type="ReferenceRect" parent="MarginContainer"]
custom_minimum_size = Vector2(360, 150)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="PocketInventory" parent="MarginContainer" instance=ExtResource("3_rrm0x")]
layout_mode = 2
